# hero_pipecat_backend

./: .env  .gitignore  main.py  pyproject.toml
helpers/: bot.py  db.py
routers/: server.py
whatsapp/: client.py  models.py  router.py
